Fixed spacing of the instructional resource content.  Now using display:flex / align-items: center rather than relying on auto margin for each individual block.  Added highlighted class which can be added to any section to highlight the background as blue.  Removed some retired css classes from a previous mockup.

--- a/webapp/src/app/resource/instructional/content/resource-content.component.scss
+++ b/webapp/src/app/resource/instructional/content/resource-content.component.scss
@@ -4,13 +4,15 @@
 
 :host {
     position: relative;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     max-width: none;
     &::before {
         content: '';
         position: absolute;
         top: 0;
-        left: -42px;
+        left: calc(50% - 32.4ch - 42px);
         display: block;
         width: 100px;
         height: 46px;
@@ -20,9 +22,7 @@
         background-repeat: no-repeat;
     }
     .actions {
-        display:flex;
-        justify-content: flex-end;
-        align-items: center;
+        align-self: flex-end;
         padding-top: $spacer-lg;
         margin-bottom: $spacer;
     }
@@ -61,29 +61,9 @@
         }
     }
 
-    h3 {
-        text-transform: uppercase;
-        margin-bottom: 0;
-    }
-
     .modified-info {
         font-size: 0.8em;
         font-style: italic;
-    }
-
-    .two-fr-grid {
-        display: grid;
-        grid-template: 1fr / 1fr 1fr;
-    }
-
-    .image-container {
-        display: grid;
-        grid-template: 1fr / 1fr 4fr;
-    }
-
-    .metadata-container {
-        display: grid;
-        grid-template: 1.2em 1fr 1fr  / 2fr 1fr;
     }
 }
 
